frontend/src/assets/stylesheets/main.scss
/* ... */
//--Home--

.home {
	.kdl-container {
		max-width: 1500px;
		padding: 0 2em;
	}

	h2 {
		font-size: 3em;
		text-decoration: none;
		text-underline-position: under;
		position: relative;
		text-align: center;
		margin-bottom: 100px; /* to add extra spaces after h2 */

		&::after {
			content: "";
			position: absolute;
			width: 80px;
			height: 5px; /* to fix height of the underline */
			bottom: -30px;
			left: 50%; /* to fix horizontal position */
			margin-left: -40px; /* to center the underline horizontally */
			background-color: rgba(0, 0, 0, 1); /* black underline color, cannot remove */
			box-shadow:
				rgba(10, 189, 240, 0.25) 3px 3px 0px,
				rgba(254, 1, 1, 0.25) -3px -3px 0px;
			display: block;
			display: block;
		}
	}

	.hero {
		background-color: $navy;
		background-image: linear-gradient(black, rgba(10, 45, 80, 0.9));
		color: white;
		height: calc(100vh - 55px);
		position: relative;
		width: calc(100% + 2em);
		margin: 0 0 6em -1em;

		video {
			height: 100%;
			left: 0;
			object-fit: cover;
			opacity: 0.5;
			position: absolute;
			top: 0;
			width: 100%;
			@include transition(all 400ms ease-in-out);
		}

		.hero-content {
			color: white;
			left: 50%;
			position: absolute;
			text-align: center;
			text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
			top: 50%;
			transform: translate(-50%, -50%);
			z-index: 1;

			&:hover {
				text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
				~ video {
					opacity: 0.3;
				}
			}

			h1 {
				font-size: 2.5em;
				margin: 0;
			}

			p {
				font-size: 2.7em;
				font-family: KingsCaslon, serif;
			}
			button {
				background: rgba(255, 255, 255, 0.8);
				color: $navy;
				border: 0.05em solid white;
				&:hover {
					background: white;
					border: 0.05em solid $navy;
				}
			} //button
		} //.hero-content

		a.scroll {
			bottom: 1em;
			color: white;
			display: block;
			font-size: 2.4em;
			line-height: 1;
			font-weight: 100;
			position: absolute;
			text-align: center;
			width: 100%;
			z-index: 1;
			opacity: 0.7;
			@include transition(all 300ms ease-in-out);

			&:focus,
			&:hover {
				opacity: 1;
				line-height: 0.7;
				~ video {
					opacity: 0.3;
				}
			}
		} //a.scroll
	} //.hero

	figcaption {
		display: none;
	}

	.explore,
	.discover,
	.contact,
	.communities {
		section {
			display: flex;
			flex-wrap: wrap;
			justify-content: space-between;
			margin-bottom: 4em;
			div {
				flex-basis: calc(33.33% - 0.5em);
				min-width: 0;
				margin-bottom: 1.5em;
				padding: 1.5em 0.7em 1em 0.7em;
				background-color: lighten($lightgray, 5%);
			}
			a {
				text-decoration: none;
				&:hover {
					text-decoration: underline;
					text-decoration-style: dashed;
				}
			}
		} //section

		figure {
			margin: 0;
			img {
				width: 100%;
				height: 15em;
				object-fit: cover;
			}
		}
		a {
			line-height: 1.5;
			&.browse {
				float: right;
				margin-top: 1.7em;
			} //browse
		}

		.research,
		.activities {
			position: relative;
			padding: 2em 1.5em 0.5em 1.5em;
			&:before {
				content: " ";
				display: block;
				position: absolute;
				left: 0;
				top: 0;
				width: 100%;
				height: 100%;
				opacity: 0.4;
				background-image: url("/assets/images/general/research.jpg");
				background-repeat: no-repeat;
				background-position: 50% 0;
				background-size: cover;
				background-color: #cccccc;
			} //:before
			.research-block,
			.activities-block {
				flex-basis: calc(25% - 0.5em);
				background-color: white;
				position: relative;
				padding: 0.1em 0.7em 0.7em 0.7em;
				padding: 0.1em 1em 0.7em 1em;
			}
		} //.research, .activities

		.activities {
			h4 {
				padding: 0.3em;
			}
			&:before {
				background-image: url("/assets/images/general/activities.jpg");
			}
			.activities-block {
				flex-basis: calc(33.3% - 1.5em);
				padding: 0.1em 0.7em 0.7em 0.7em;
			}
		} //.activities-blocks
	} //.explore, .discover, .contact
	.explore {
		h3 {
			float: left;
		}
	} //explore
	.communities {
		figure {
			background: white;
			text-align: center;
			height: 12em;
			img {
				width: 100%;
				max-width: 15em;
				height: auto;
				position: relative;
				top: 50%;
				transform: translateY(-50%);
			}
		}
	}
	.contact {
		text-align: center;
	}
} //.home

//-- Projects Index Page --
main.projects {
	ul.list li section p {
		margin: 0.2em 0 0 0;
	} //ul.list li section p
} //.projects
/* ... */

